--- a/Fibonacci_series.ipynb
+++ b/Fibonacci_series.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "#write python program to print fibonacci series\r\n",
     "\r\n",
-    "x=0\r\n",
-    "y=1\r\n",
-    "z=0\r\n",
-    "print(x)\r\n",
+    "Second_last=0\r\n",
+    "Last_term=1\r\n",
+    "Sum_of_both=0\r\n",
+    "print(Second_last)\r\n",
     "for i in range(1,50):\r\n",
-    "    x=y\r\n",
-    "    y=z\r\n",
-    "    z=x+y\r\n",
-    "    if z<50:\r\n",
-    "        print(z)"
+    "    Second_last=Last_term\r\n",
+    "    Last_term=Sum_of_both\r\n",
+    "    Sum_of_both=Second_last+Last_term\r\n",
+    "    if Sum_of_both<50:\r\n",
+    "        print(Sum_of_both)"
    ],
    "outputs": [
     {
