--- a/Don't_go_Outside_in_Odd_day.ipynb
+++ b/Don't_go_Outside_in_Odd_day.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "Count_Even = 0\r\n",
     "Count_Odd = 0\r\n",
@@ -14,6 +14,22 @@
     "print(\"Number of even numbers : \",Count_Even)\r\n",
     "print(\"Number of odd numbers : \",Count_Odd)"
    ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Number of even numbers :  4\n",
+      "Number of odd numbers :  5\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
@@ -21,7 +37,23 @@
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "2021.5",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 2021.5 64-bit"
+  },
+  "interpreter": {
+   "hash": "cc5f70855ac006f3de45a3cc3b9e7d8d53845e50458809cb162b0174266dec97"
   }
  },
  "nbformat": 4,
