--- a/Fun_with_Lists_and_Tuples.ipynb
+++ b/Fun_with_Lists_and_Tuples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "sample_list=[(2, 1), (1, 2), (2, 3), (4, 4), (2, 5)]\r\n",
+    "sample_list=[(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]\r\n",
     "def last(n):\r\n",
     "    return n[-1]\r\n",
     "sorted(sample_list, key=last)\r\n",
@@ -46,7 +46,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "cc5f70855ac006f3de45a3cc3b9e7d8d53845e50458809cb162b0174266dec97"
