--- a/Fun_with_Lists_and_Tuples.ipynb
+++ b/Fun_with_Lists_and_Tuples.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "sample_list=[(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]\r\n",
     "def last(n):\r\n",
-    "    return n[-1]\r\n",
-    "sorted(sample_list, key=last)\r\n",
+    "    return n[1]\r\n",
+    "def sorting_by_last_element(list_of_tuples):\r\n",
+    "    return sorted(sample_list, key=last)\r\n",
     "\r\n",
-    "print(sample_list)"
+    "print(sorting_by_last_element(sample_list))"
    ],
    "outputs": [
     {
