--- a/DSA_EDYODA/convert_postfix_to_prefix_expression.ipynb
+++ b/DSA_EDYODA/convert_postfix_to_prefix_expression.ipynb
@@ -2,39 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABC/-AK/L-*\n"
+      "Prefix :  +AB-CD\n"
      ]
     }
    ],
    "source": [
-    "s = \"*-A/BC-/AKL\"\n",
-    "stack = []\n",
+    "def isOperator(x):\n",
     "\n",
-    "operators = set(['+', '-', '*', '/', '^'])\n",
+    "\tif x == \"+\":\n",
+    "\t\treturn True\n",
     "\n",
-    "s = s[::-1]\n",
+    "\tif x == \"-\":\n",
+    "\t\treturn True\n",
     "\n",
-    "for i in s:\n",
+    "\tif x == \"/\":\n",
+    "\t\treturn True\n",
     "\n",
-    "\tif i in operators:\n",
+    "\tif x == \"*\":\n",
+    "\t\treturn True\n",
     "\n",
-    "\t\ta = stack.pop()\n",
-    "\t\tb = stack.pop()\n",
+    "\treturn False\n",
     "\n",
-    "\t\ttemp = a+b+i\n",
-    "\t\tstack.append(temp)\n",
     "\n",
-    "\telse:\n",
-    "\t\tstack.append(i)\n",
+    "def postToPre(post_exp):\n",
     "\n",
-    "print(*stack)\n"
+    "\ts = []\n",
+    "\n",
+    "\tlength = len(post_exp)\n",
+    "\n",
+    "\tfor i in range(length):\n",
+    "\n",
+    "\t\tif (isOperator(post_exp[i])):\n",
+    "\n",
+    "\t\t\top1 = s[-1]\n",
+    "\t\t\ts.pop()\n",
+    "\t\t\top2 = s[-1]\n",
+    "\t\t\ts.pop()\n",
+    "\n",
+    "\t\t\ttemp = post_exp[i] + op2 + op1\n",
+    "\n",
+    "\t\t\ts.append(temp)\n",
+    "\n",
+    "\t\telse:\n",
+    "\n",
+    "\t\t\ts.append(post_exp[i])\n",
+    "\n",
+    "\t\n",
+    "\tans = \"\"\n",
+    "\tfor i in s:\n",
+    "\t\tans += i\n",
+    "\treturn ans\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "\tpost_exp = \"AB+CD-\"\n",
+    "\t\n",
+    "\tprint(\"Prefix : \", postToPre(post_exp))\n",
+    "\n"
    ]
   },
   {
