--- a/Data Wrangling/panda.ipynb
+++ b/Data Wrangling/panda.ipynb
@@ -279,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------First 10 entries -------\n"
+      "First 10 entries"
      ]
     },
     {
@@ -412,7 +412,7 @@
     }
    ],
    "source": [
-    "print('--------First 10 entries -------')\n",
+    "print('First 10 entries')",
     "users.head(10)\n"
    ]
   },
@@ -426,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------Last 10 entries -------\n"
+      "Last 10 entries"
      ]
     },
     {
@@ -559,7 +559,7 @@
     }
    ],
    "source": [
-    "print('--------Last 10 entries -------')\n",
+    "print('Last 10 entries')",
     "users.tail(10)"
    ]
   },
